--- a/ratings/src/main/resources/static/index.html
+++ b/ratings/src/main/resources/static/index.html
@@ -7,31 +7,17 @@
 </head>
 <body>
 <div class="container">
-    <form id="user-form">
-        <div class="form-group">
-            <label for="username" class="form-label">Username:</label>
-            <input  id="username" class="form-control">
-        </div>
-        <button id="disconnectBtn" type="button" class="btn btn-danger mt-4">Disconnect</button>
-        <button id="connectBtn" type="button" class="btn btn-primary mt-4">Connect</button>
-    </form>
+    Rating: <span id="rating">Unknown</span>
     <form id="message-form" class="mt-5">
         <div class="form-group">
             <label for="message" class="form-label">Message:</label>
             <input  id="message" class="form-control">
         </div>
-        <div class="form-group">
-            <label for="recipient" class="form-label">Recipient:</label>
-            <input  id="recipient" class="form-control">
-        </div>
         <button id="sendBtn" type="button" class="btn btn-primary mt-4">Send</button>
     </form>
-    <div id="messages" class="mt-5"></div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="js/sockjs.js"></script>
-<script src="js/stomp.js"></script>
 <script src="js/ratings.js"></script>
 </body>
 </html>
